src/stylesheets/style.sass
$light-blue: #8bd3dd
  
$dark-blue: #172c66

$darker-blue: #001858

$beige: #f5e9ca

$orange: #ff9a41

$off-white: #FAF9F6

@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap')

$poppins: 'Poppins', sans-serif
  
*
  box-sizing: border-box

button
    cursor: pointer
    font-family: $poppins
    border: none

    font-size: 1.5rem
    line-height: 1.3rem
    text-align: center
    background-color: $light-blue
h1
  font-size: 3rem
  line-height: 3.5rem
  font-weight: 500

  color: $darker-blue

h2
  font-size: 2.2rem
  line-height: 2.7rem
  text-align: center

  color: $darker-blue

h3

  text-align: center
  font-size: 1.8rem
  line-height: 2rem
  color: $darker-blue

body
  max-width: 100vw
  max-height: 100vh
  background-color: $off-white
  color: $orange


  font-family: $poppins


nav
  display: flex
  justify-content: center
  align-items: center

  width: 100vw
  height: auto

  div > *

    display: inline-block

img
  max-height: 3.5rem
  width: auto

main
  display: flex
  flex-direction: column
  justify-content: center
  align-items: center

  height: 90vh
  width: 100vw

#content-container
  position: relative
  z-index: 2
  box-sizing: border-box
  display: flex
  flex-direction: column
  justify-content: space-between
  align-items: center

  height: auto
  height: clamp(330px, 500px, 60vh)
  width: clamp(250px, 360px, 90vw)
  padding: 2vmin
  padding-bottom: 0

  margin-top: 2vh 
  margin-bottom: 10vh


  border: 5px solid $dark-blue

  background-color: $beige

  color: $darker-blue

  box-shadow: 12px 10px 0px $dark-blue

  & > * 
    width: 100%

    margin-bottom: 1vh


#list-container
  width: 90%
  height: 85%

  ul
    overflow: scroll
    height: 100%

    background-color: $off-white
    border: 2px solid $dark-blue
    li
      height: auto

      padding: 1vh 0

      border-bottom: 2px solid $dark-blue

      div
        display: flex
        justify-content: space-around
        text-align: center
        padding-bottom: 1vh


          
        & > span
          width: 50%

          &:first-child:not(.li-title)
            
            text-align: right
            
        &:last-child
          padding: 0
          border-bottom: none
      &:last-child
        border-bottom: none


      
.li-title 
  width: 100%
  text-align: center
  text-decoration: underline
  padding-bottom: 1vh

  font-size: 1.3rem


#button-div
  display: flex
  justify-content: space-around
  align-items: center

  button
      width: 40%
      height: auto

      font-size: 1.3rem
      line-height: 1.5rem
      text-align: center

      background-color: $orange
      

      padding: 0.5rem 1rem


#date-container
  text-align: center


#icon-temp
  position: relative
  display: flex
  justify-content: space-around
  align-items: center
 
  div
    width: 50%
    text-align: center
    font-size: 2.5rem
  
  #icon-div
    display: flex
    flex-direction: column
    justify-content: space-around
    align-items: center
    font-size: 1rem

    &::after
      content: ""
      position: absolute
      right: 50%
      height: 3rem
      border-right: 2px solid $dark-blue

#details
  display: grid
  grid-template-rows: repeat(auto-fit, 1fr)
  height: clamp(25%, 500px, 150px)
  width: 90%

  border: 2px solid $dark-blue


  background-color: $off-white

  div
    display: flex
    justify-content: space-around
    align-items: center

    & > *
      width: 50%
      text-align: center

      &:first-child
        text-align: right
      
#search-window
  justify-content: space-around


#incorrect-input
  display: none
  text-align: center
  color: red


form
  display: flex
  flex-direction: column
  justify-content: space-around
  
  text-align: center
  color: $darker-blue

  div
    padding-bottom: 3vh

  label
    text-align: justify
    display: inline-block
    width: 80%

    padding-bottom: 1vh

  label + input 
    width: 80%
    height: 1.8rem

    line-height: 1.7rem
    font-family: $poppins
    

#bar-menu
  position: fixed
  bottom: 5vh

  left: 50%
  transform: translateX(-50%)

  display: flex
  justify-content: space-around
  align-items: center

  height: 7vh
  width: clamp(250px, 360px, 90vw)

  margin: 0 auto
  

  border-radius: 2px

  background-color: rgba(255, 255, 254, 0.63)


  button
    width: 50%
    height: inherit

  #metric-button
    border-right: 1px solid $dark-blue
  #imperial-button
    
    border-left: 1px solid $dark-blue
    

#bottom-link
  position: fixed
  bottom: 0
  width: 100vw
  text-align: center

  a
    text-decoration: none
    color: $darker-blue

